# INF339_assignment2

./: README.md  results.txt  works.txt
1a/: 1a_all_gather.cpp  CMakeLists.txt  a.out  comm_time.cpp  job116  total.cpp
1b/: 1b_seperator.cpp  a.out  out.txt
1d/: 1d_send_vals.cpp  1d_total.cpp  CMakeLists.txt  a.out  comm_time.cpp  job116  job816  omp.cpp  out.txt  send_vals.cpp  total.cpp
2/: 2_attempt.cpp  CMakeLists.txt  a.out  omp.cpp  out.txt  plot.py
